--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
 	<meta name="author" content="Adrian Baenas">
 	<title>Compulsory excercise</title>
+    <link type="text/css" rel="stylesheet" href="styles.css">
 </head>
 <body>
-	
+	<h1>Page Title<h1>
+    <br>
+    <p>paragraph example</p>
 
 </body>
 </html>
