Added first image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<h1>Page Title<h1>
     <br>
     <p>paragraph example</p>
+    <img src="images/picture.jpg" alt="imagen de ejemplo">
 
 </body>
 </html>
