--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <br>
     <p>paragraph example</p>
     <img src="images/picture.jpg" alt="imagen de ejemplo">
-
+    <footer>
+        <p>Company: Adrian S.L</p>
+        <p><a href="mailto:adrbaefun@alu.edu.gva.es" title="correoalumno">adrbaefun@alu.edu.gva.es</a></p>
+    </footer>
 </body>
 </html>
