content added to body in branch home

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <br>
     <p>paragraph example</p>
     <img src="images/picture.jpg" alt="imagen de ejemplo">
+    <p>This paragraph is added to test the merge command</p>
+    <p>Believe in God</p>
     <footer>
         <p>Company: Adrian S.L</p>
         <p><a href="mailto:adrbaefun@alu.edu.gva.es" title="correoalumno">adrbaefun@alu.edu.gva.es</a></p>
